<resources>
    <string name="app_name">Tallkrønsj</string>
    <string name="start_game">Start spill</string>
    <string name="statistics_btn">Se statistikk</string>
    <string name="statistics">Statistikk</string>
    <string name="preferences">Preferanser</string>
    <string name="language">Språk</string>
    <string name="norwegian">Norsk</string>
    <string name="german">Tysk</string>
    <string name="number_of_questions">Antall Regnestykker</string>
    <string name="title_activity_game">Tallkrønsj</string>
    <string name="title_activity_statistics">Statistikk</string>
    <string name="question_field_text">Svar på følgende mattestykke og trykk "svar":</string>
    <string name="key_0">0</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="answer_key">Svar</string>
    <string name="delete_key">Slett</string>
    <string name="game_end_title">Fullført</string>
    <string name="game_end_msg">Det er ingen flere tilgjengelige spørsmål</string>
    <string name="ok">Ok</string>
    <string name="exit_game_msg">Vil du virkelig avslutte spillet?</string>
    <string name="right_answer">Riktig svar!</string>
    <string name="wrong_answer">Galt svar!</string>
    <string name="score_txt">Antall riktige:</string>
    <string name="total_game_title">Total poengsum:</string>
    <string name="last_game_title">Siste spill poengsum:</string>
    <string name="delete_statistics">Slett statistikk</string>
    <string name="cancel_dialog_title">Avslutt spill</string>
    <string name="cancel_dialog_text">Vil du virkelig avslutte spillet?</string>
    <string name="yes">Ja</string>
    <string name="no">Nei</string>
    <string name="delete_stats_title">Slett statistikk</string>
    <string name="delete_stats_txt">Er du sikker på at du vil slette statistikken?</string>
</resources>